--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,19 +1,18 @@
 <% title "Articles" %>
 
-<%= form_tag articles_path, :method => :get do %>
+<%= form_tag search_results_articles_path, :method => :post do %>
   <p>
     <%= text_field_tag :search, params[:search] %>
     <%= submit_tag "Search", :name => nil %>
   </p>
 <% end %>
-
 <div id="articles">
 <% @articles.each do |article| %>
   <h2>
-    <%= link_to h(article.name), article %>
+    <%= link_to (article.name), article %>
     <span class="comments">(<%= pluralize(article.comments.size, 'comment') %>)</span>
   </h2>
-  <div class="author">from <%=h article.author.first_name %> <%=h article.author.last_name %> on <%= article.created_at.strftime('%b %d, %Y') %></div>
+  <div class="author">from <%= article.author.first_name %> <%= article.author.last_name %> on <%= article.created_at.strftime('%b %d, %Y') %></div>
   <div class="content"><%= simple_format(article.content) %></div>
 <% end %>
 </div>
