--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,6 @@
 <% title @article.name %>
 
-<p class="author"><em>from <%=h @article.author.first_name %> <%=h @article.author.last_name %></em></p>
+<p class="author"><em>from <%= @article.author.first_name %> <%= @article.author.last_name %></em></p>
 
 <%= simple_format @article.content %>
 
@@ -10,9 +10,9 @@
   <h2><%= pluralize(@article.comments.size, 'comment') %></h2>
 
   <div id="comments">
-  <% for comment in @article.comments %>
+  <% @article.comments.each do |comment| %>
     <div class="comment">
-      <strong><%= link_to_unless comment.site_url.blank?, h(comment.author_name), h(comment.site_url) %></strong>
+      <strong><%= link_to comment.author_name %></strong>
       <em>on <%= comment.created_at.strftime('%b %d, %Y at %H:%M') %></em>
       <%=simple_format comment.content %>
     </div>
