--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,6 +5,7 @@
     <%= text_field_tag :search, params[:search] %>
     <%= submit_tag "Search", :name => nil %>
   </p>
+    <div><%= link_to "Create New Article",new_article_path %></div>
 <% end %>
 <div id="articles">
 <% @articles.each do |article| %>
